@@ -1,7 +1,7 @@
 
 # The R Commander and command logger
 
-# last modified 2016-02-22 by John Fox
+# last modified 2016-03-20 by John Fox
 
 # contributions by Milan Bouchet-Valat, Richard Heiberger, Duncan Murdoch, Erich Neuwirth, Brian Ripley
 
@@ -309,12 +309,12 @@ Commander <- function(){
     putRcmdr("dialog.values", list())
     putRcmdr("dialog.values.noreset", list())
     putRcmdr("savedTable", NULL)
-    log.height <- as.character(setOption("log.height", if (!getRcmdr("log.commands")) 0 else 10, global=FALSE))
-    log.width <- as.character(setOption("log.width", 80, global=FALSE))
+    log.height <- as.character(setOption("log.height", if (!getRcmdr("log.commands")) 0 else 10))
+    log.width <- as.character(setOption("log.width", 80))
     output.height <- as.character(setOption("output.height",
         if (getRcmdr("console.output")) 0
         else if ((as.numeric(log.height) != 0) || (!getRcmdr("log.commands"))) 2*as.numeric(log.height)
-        else 20, global=FALSE))
+        else 20))
     messages.height <- as.character(setOption("messages.height", 3))
     putRcmdr("saveOptions", options(warn=1, contrasts=getRcmdr("default.contrasts"), width=as.numeric(log.width),
         na.action="na.exclude", graphics.record=TRUE))
@@ -357,6 +357,9 @@ Commander <- function(){
     putRcmdr("theme", theme)
     tk2theme(theme)
     placement <- setOption("placement", "", global=FALSE)
+    
+    putRcmdr("open.showData.windows", list())
+    
     # platform-specific issues
     if (getRcmdr("suppress.X11.warnings")) {
         putRcmdr("messages.connection", file(open = "w+"))
@@ -549,7 +552,7 @@ Commander <- function(){
     
     # data-set view
     onView <- function(){
-        if (packageAvailable("relimp")) Library("relimp", rmd=FALSE)
+#        if (packageAvailable("relimp")) Library("relimp", rmd=FALSE)
         if (activeDataSet() == FALSE) {
             tkfocus(CommanderWindow())
             return()
@@ -557,12 +560,19 @@ Commander <- function(){
         suppress <- if(getRcmdr("suppress.X11.warnings")) ", suppress.X11.warnings=FALSE" else ""
         view.height <- max(as.numeric(output.height) + as.numeric(log.height), 10)
         ncols <- ncol(get(ActiveDataSet()))
-        command <- if (packageAvailable("relimp") && ncols <= getRcmdr("showData.threshold")){
+        command <- if (ncols <= getRcmdr("showData.threshold")){
             paste("showData(", ActiveDataSet(), ", placement='-20+200', font=getRcmdr('logFont'), maxwidth=",
                 log.width, ", maxheight=", view.height, suppress, ")", sep="")
         }
         else paste("View(", ActiveDataSet(), ")", sep="")
-        doItAndPrint(command, rmd=FALSE)
+        window <- justDoIt(command)
+        if (!is.null(window)){
+          open.showData.windows <- getRcmdr("open.showData.windows")
+          open.window <- open.showData.windows[[ActiveDataSet()]]
+          if (!is.null(open.window)) tkdestroy(open.window)
+          open.showData.windows[[ActiveDataSet()]] <- window
+          putRcmdr("open.showData.windows", open.showData.windows)
+        }
     }
     
     # submit command in script tab or compile .Rmd file in markdown tab or compile .Rnw file in knitr tab
