@@ -8,6 +8,8 @@ Changes to Version 2.2-4
   
   o New version of ismdi() doesn't need compiled code (thanks to Duncan Murdoch), eliminating all compiled code from the Rcmdr package.
   
+  o showData() data set displays now updated automatically.
+  
   o Small improvements and bug fixes.
 
 Changes to Version 2.2-3
